<resources>
    <string name="app_name">Jupiter</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_camera">Camera</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello consensus unit</string>
    <string name="title_activity_login">Login Activity</string>
    <string name="login">Login</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="forget_your_password">Forget your password? </string>
    <string name="login_success">Successful login!</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>
    <string name="reg_success">Successful registration!</string>
    <string name="number_of_blocks">Number of Blocks:   </string>
    <string name="storage_status">Storage Status</string>
    <string name="distribution_status">Distribution Status</string>
    <string name="current_cu_address">0x16obUsfXvcYq6mXXC2XxyUGyq57MRFjCKu</string>
    <string name="current_cu_active_node_1">0x9678a86f0201231D4ef7a3EC05f0c49166</string>
    <string name="current_cu_active_node_2">0x6a19F0379F98120bbE6172645ACd9A5a4A</string>
    <string name="current_cu_active_node_3">0x957A48b64E440B163b2e3E3cC950D2997e</string>
    <string name="current_cu_active_node_4">0x096fA565a2C77484e83DFe0eE2a811Dd76</string>
    <string name="current_cu_active_node_5">0x293fE06a6065498719419F78f929a1350c</string>
</resources>
