<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/x_axis"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ust.jupiter.jupiter.fragment.DigitalAssetFragment">

    <!-- TODO: Update blank fragment layout -->
    <View
        android:layout_width="5dp"
        android:layout_height="18dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:background="@color/jupiterChain" />

    <View
        android:layout_width="5dp"
        android:layout_height="18dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="45dp"
        android:background="@color/jupiterChain" />


    <Button
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/active_round_button" />


    <Button
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="88dp"
        android:background="@drawable/active_round_button" />

    <TextView
        android:id="@+id/text_node2"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="85dp"
        android:gravity="center"
        android:text="@string/current_cu_active_node_2"
        android:textSize="14sp" />


    <Button
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="108dp"
        android:background="@drawable/active_round_button" />

    <Button
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="128dp"
        android:background="@drawable/active_round_button" />


    <Button
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="148dp"
        android:background="@drawable/active_round_button" />


    <View
        android:layout_width="5dp"
        android:layout_height="18dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="190dp"
        android:background="@color/jupiterChain" />


    <View
        android:layout_width="fill_parent"
        android:layout_height="3px"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:background="@color/colorHint" />

    <TextView
        android:id="@+id/text_storage_status_title"
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="45dp"
        android:text="Active peers: "
        android:textColor="#000000"
        android:textSize="14sp" />

    <View
        android:id="@+id/x_axis"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="390dp"
        android:background="@color/colorHint" />

    <View
        android:id="@+id/y_axis"
        android:layout_width="1dp"
        android:layout_height="170dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="220dp"
        android:background="@color/colorHint" />

    <View
        android:id="@+id/view"
        android:layout_width="fill_parent"
        android:layout_height="3px"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="185dp"
        android:background="@color/colorHint" />

    <TextView
        android:id="@+id/text_distrib_status_title"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="190dp"
        android:text="Ledger Status"
        android:textColor="#000000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/text_active_peers"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="45dp"
        android:text="6 / 9"
        android:textColor="#9a9a9a"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/text_block_num_title"
        android:layout_width="103dp"
        android:layout_height="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="Current Blocks: "
        android:textColor="#000000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/sum"
        android:layout_width="47dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginTop="370dp"
        android:text="Sum"
        android:textColor="#000000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/text_block_num"
        android:layout_width="39dp"
        android:layout_height="15dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="20dp"
        android:text="2451"
        android:textColor="#9a9a9a"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/text_node5"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="145dp"
        android:gravity="center"
        android:text="@string/current_cu_active_node_5"
        android:textSize="14sp" />

    <Button
        android:id="@+id/button_optcu"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="400dp"
        android:background="@drawable/roundbutton"
        android:text="Optimize"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/text_node1"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="65dp"
        android:gravity="center"
        android:text="@string/current_cu_active_node_1"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/text_node4"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="125dp"
        android:gravity="center"
        android:text="@string/current_cu_active_node_4"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/text_node3"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="105dp"
        android:gravity="center"
        android:text="@string/current_cu_active_node_3"
        android:textSize="14sp" />

    <View
        android:id="@+id/storage_current_node1"
        android:layout_width="149dp"
        android:layout_height="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="250dp"
        android:background="@color/colorBackground" />

    <View
        android:id="@+id/storage_current_node2"
        android:layout_width="52dp"
        android:layout_height="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="280dp"
        android:background="@color/colorBackground" />

    <View
        android:id="@+id/storage_current_node3"
        android:layout_width="200dp"
        android:layout_height="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="310dp"
        android:background="@color/colorBackground" />

    <View
        android:id="@+id/storage_current_node4"
        android:layout_width="93dp"
        android:layout_height="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="340dp"
        android:background="@color/colorBackground" />

    <View
        android:id="@+id/storage_current_sum"
        android:layout_width="272dp"
        android:layout_height="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="370dp"
        android:background="@color/colorBackground" />

    <View
        android:id="@+id/view3"
        android:layout_width="81dp"
        android:layout_height="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="220dp"
        android:background="@color/colorBackground" />

    <TextView
        android:id="@+id/text_current_storage_chart"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="220dp"
        android:text="Current"
        android:textColor="#000000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="165dp"
        android:text="...Details..."
        android:textColor="@color/colorHint"
        android:textSize="14sp" />

</FrameLayout>
